@@ -1,6 +1,8 @@
 module God
   
   class Behavior
+    include Configurable
+    
     attr_accessor :watch
     
     # Generate a Behavior of the given kind. The proper class if found by camel casing the
@@ -14,32 +16,7 @@ module God
     rescue NameError
       raise NoSuchBehaviorError.new("No Behavior found with the class name God::Behaviors::#{sym}")
     end
-    
-    # Override this method in your Behaviors (optional)
-    #
-    # Called once after the Condition has been sent to the block and attributes have been
-    # set. Do any post-processing on attributes here
-    def prepare
-      
-    end
-    
-    # Override this method in your Behaviors (optional)
-    #
-    # Called once during evaluation of the config file. Return true if valid, false otherwise
-    #
-    # A convenience method 'complain' is available that will print out a message and return false,
-    # making it easy to report multiple validation errors:
-    #
-    #   def valid?
-    #     valid = true
-    #     valid &= complain("You must specify the 'pid_file' attribute for :memory_usage") if self.pid_file.nil?
-    #     valid &= complain("You must specify the 'above' attribute for :memory_usage") if self.above.nil?
-    #     valid
-    #   end
-    def valid?
-      true
-    end
-    
+        
     #######
     
     def before_start
@@ -60,12 +37,11 @@ module God
     def after_stop
     end
     
-    protected
-    
-    def complain(text)
-      Syslog.err(text)
-      puts text
-      false
+    # Construct the friendly name of this Behavior, looks like:
+    #
+    # Behavior FooBar on Watch 'baz'
+    def friendly_name
+      "Behavior " + super + " on Watch '#{self.watch.name}'"
     end
   end
   
