@@ -13,13 +13,13 @@ module God
       
       def valid?
         valid = true
-        valid &= complain("You must specify the 'failures' attribute for :notify_when_flapping") unless self.failures
-        valid &= complain("You must specify the 'seconds' attribute for :notify_when_flapping") unless self.seconds
-        valid &= complain("You must specify the 'notifier' attribute for :notify_when_flapping") unless self.notifier
+        valid &= complain("Attribute 'failures' must be specified", self) unless self.failures
+        valid &= complain("Attribute 'seconds' must be specified", self) unless self.seconds
+        valid &= complain("Attribute 'notifier' must be specified", self) unless self.notifier
                 
         # Must take one arg or variable args
         unless self.notifier.respond_to?(:notify) and [1,-1].include?(self.notifier.method(:notify).arity)
-          valid &= complain("The 'notifier' must have a method 'notify' which takes 1 or variable args")
+          valid &= complain("The 'notifier' must have a method 'notify' which takes 1 or variable args", self)
         end
         
         valid
